--- a/index.html
+++ b/index.html
@@ -17,6 +17,45 @@
       culpa qui officia deserunt mollit anim id est laborum.
     </details> 
     <br>
+    <h1>「他人は自分を映す鏡」の意味について再考</h1> 
+    <details>
+      <summary>もっと見る</summary> 
+      ぼくが20代後半の頃、とある尊敬するマンガ家から「他人とは、自分を映す鏡でしかないから。みんな、ぼくをみて、アドバイスしてくれてるわけじゃない。ぼくという鏡に映った自分をみて意見を言ってる。」と言われた。
+
+当時のぼくは、その意味するところがうまく理解できなかったのだが、その言葉は胸にずっと残り続けていた。「他人は自分を映す鏡」という言葉の意味は、それ以来何度も考えるようになった。
+
+例えば、「あの人はいつも無愛想だ」と思ったとする。でも、それは自分が相手に無愛想に接しているから、相手も無愛想に接するのであって、自分の立ち振る舞いの結果が相手に反映されているだけに過ぎないかもしれない。
+
+以前に投稿した『他人への印象なんて、どれもいい加減』というnoteでも紹介したが、平野啓一郎が分人主義とは何かを書いた『私とは何か』という本に、こんな一節がある。
+
+私たちに知りうるのは、相手の自分向けの分人だけである。それが現れる時、相手の他の分人は隠れてしまう。
+
+「私とは何か　『個人』から『分人』へ」 平野啓一郎 (著)
+自分が知り得る相手の印象は、相手の自分向けの分人だけを見て判断したものに過ぎなく、どれもいい加減である。そういう旨を以前書いた。そして、相手の分人を引き出すのは自分か、自分たちがいる環境だ。相手が狡いと思ったら、自分が相手の狡さを引き出す器だったとも言える。
+
+相手の自分向けの分人を見て、自分はどういう存在なのか、自分たちがいる環境はどういう状態なのかを知る。分人の概念から考えると、「他人は自分を映す鏡」という言葉は、しっくりくる。
+
+ぼくらは自分を通してしか、世界を眺めることができない。世界も社会も他人も、みんな自分の鏡でしかない。
+
+また、「あの人は、〇〇へのこだわりが深い」「あの人は、〇〇が雑だ」と他人について描写することがある。それは、他者を見ているのではない。自分の「上位資質の物差し」を公言しているに過ぎない。自分が人を見る時に、そのポイントに着目してしまう、という自分の嗜好性が明らかになっているだけだと感じる。
+
+以前に投稿した『相手に対して、「こだわりが足りない」と思ったら』というnoteにも書いたが、自分にとって解像度が高く見えるポイントは、自分の上位資質だ。上位資質は無意識のうちに勝手に発動してしまうので、その物差しによって相手のことを見てしまう。
+
+他人について語っているようで、実は自分について語っている。
+
+これまでにnoteで散々書いてきたが、ぼくは「自己認識」を高めることに興味がある。自分自身を理解できない存在と捉え、理解しようと努め続けている人こそが、熟達していくのだと。そして、その自分と向き合う行為は、世間への関心のなさではなく、関心の高さを示すものだとぼくは思う。
+
+自己認識において最も難しいのが、自分の知らない自分を知ることだ。ジョハリの窓でいうところの「盲点の窓（blind self）」であり、『観察力の鍛え方』でいうところの「偏見メガネ」だ。
+
+自分が他人に対して自然と感じたことの中から、自分の盲点や偏見メガネを探す。そうしたアプローチもある得る。
+
+同時に他者からのフィードバックの受け取り方も、すごく変わる。そのフィードバックは、ぼくをよく理解して出てきた言葉ではない。ぼくを鏡として、相手が、ぼくの中にみたことを言ってる。そう思うと、フィードバックの解釈の仕方が変わる。
+
+他者からのフィードバックをどうやってたくさん受け取ればいいのだろうか、ということがぼくの興味だった。受け取ったフィードバックをどのように解釈すればいいのかが、今のぼくの興味だ。
+
+他人は自分の鏡だとしたら、相手からのフィードバックは、ぼく自身ではなく、その言葉を発した人自身を表している。そこから自分という鏡の具合を想像する。そんな風に言葉を受け止めれるように、まずはなってみようと思った。
+    </details> 
+    <br>
     <h2>東京タワー</h2> 
     <iframe
       src="
