--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
+    <head>
+      <link rel="stylesheet" href="index.css">
+    </head>
     <body>
     <audio src="audiotag.mp3" controls></audio>
     <br>
     <video src="videotag.mp4" controls width="640"></video>
     <br>
-    <h1>ロレム・イプサム</h1> 
+    <h1 class="tab">ロレム・イプサム</h1> 
     <details>
       <summary>もっと見る</summary> 
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
@@ -17,7 +20,7 @@
       culpa qui officia deserunt mollit anim id est laborum.
     </details> 
     <br>
-    <h1>「他人は自分を映す鏡」の意味について再考</h1> 
+    <h1 class="">「他人は自分を映す鏡」の意味について再考</h1> 
     <details>
       <summary>もっと見る</summary> 
       ぼくが20代後半の頃、とある尊敬するマンガ家から「他人とは、自分を映す鏡でしかないから。みんな、ぼくをみて、アドバイスしてくれてるわけじゃない。ぼくという鏡に映った自分をみて意見を言ってる。」と言われた。
